[tool.poetry]
name = "testversioning"
version = "0.1.0"
description = "testcase versioning utility"
authors = ["kartik <kartik.ramesh@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
requests = "^2.31.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
